# libnix

./: .cproject  .project  AUTHORS  Makefile  Makefile.am  Makefile.in  autotoolchain.sh  build.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: DataVertex.hpp  DataVertex.ipp  Geometry.hpp  IO.hpp  LinearAlgebra.hpp  Makefile  Makefile.am  Makefile.in  Mathematix.cpp  Mathematix.hpp  Mathematix.ipp  Octree.hpp  Octree.ipp  Solver.ipp  SparseMatrix.hpp  SparseVector.hpp  SparseVector.ipp  Triangulation.ipp  abc.cpp  abc.hpp  abcgp.cpp  cov.hpp  cov.ipp  gp.cpp  gp.hpp  gp.ipp  gpevaluation.cpp  gplikelihood.cpp  gpopt.cpp  libnix.la  libnix_la-Mathematix.lo  libnix_la-gp.lo  libnix_la-hash.lo  libnix_la-model.lo  libnix_la-optimization.lo  libnix_la-statistics.lo  libnix_la-testfunctions.lo  libnix_la-tinyxml2.lo  lik.hpp  lik.ipp  (+19 more)
src/Geometry/: DataVertex.cpp  Triangulation.hpp  Triangulation.ipp
src/IO/: EPS.cpp  EPS.hpp  EPS.ipp  PNG.cpp  PNG.hpp  Povray.cpp  Povray.hpp  Povray.ipp
src/LinearAlgebra/: FiniteElements.cpp  FiniteElements.hpp  FiniteElements.ipp  Mathematix.ipp  Matrix.hpp  Matrix.ipp  Solver.hpp  Solver.ipp  SparseMatrix.hpp  SparseMatrix.ipp  SparseVector.ipp  a.out  testMatrix.cpp
src/abc/: Makefile.am  abc.cpp
src/bin_abc/: Makefile  Makefile.am  Makefile.in  bin_abc.cpp  nix-abc
src/gp/: Make.m  Makefile.am  cov.cpp  covMatern5.cpp  gp.cpp  gp.ipp  gptraining.cpp  lik.ipp  mean.ipp  mymincon.cpp  myopt.ipp
src/gp/doc/: GP.aux  GP.tex
src/lunatick/: Makefile  Makefile.am  Makefile.in  lunatick  main.cpp
src/offlattice/: Agent.cpp  Agent.hpp  Boxes.hpp  Cells.cpp  Cells.hpp  Color.cpp  Color.hpp  Covariance.cpp  Covariance.hpp  Kinetics.cpp  Kinetics.hpp  Macros.hpp  Makefile.am  Makefile.in  SimulationThread.hpp  Spring.hpp  Spring.ipp  Window.cpp  Window.hpp  WindowGL.hpp  main.cpp  moc_Window.cpp  moc_WindowGL.cpp  offlattice-gui
src/segmentation/: Makefile  lichao-segmentation  segmentation.cpp
src/tumor3d/: Agent.cpp  Agent.h  Angiogenesis.cpp  Angiogenesis.h  AsciiIO.cpp  AsciiIO.h  CellProcesses.cpp  CellProcesses.h  DiffusionReactionEquation.cpp  EpsIO.cpp  EpsIO.h  HexagonalLattice2D.cpp  Interpolation.cpp  Makefile  Makefile.am  Makefile.in  Mathematix.cpp  Mathematix.h  Molecule.cpp  Montecarlo.cpp  Montecarlo.h  PharmacoKinetics.cpp  PharmacoKinetics.h  PovrayIO.cpp  PovrayIO.h  SparseMatrix.cpp  SparseMatrix.h  SquareLattice2D.cpp  Substrate.cpp  Substrate.h  VesselNetwork.cpp  VesselNetwork.h  Vessel_Graph.cpp  Vessel_Graph.h  Vessel_Unit.cpp  VoronoiDiagramExtended.cpp  VoronoiDiagramExtended.h  compare.cpp  finiteDifferences.cpp  main.cpp  (+4 more)
src/vascularization/: Makefile.am  Makefile.in  vascularization.cpp
